Fix version in controller and fix openApi
