# src/main/java/org/example/nerdysoft/input/web/MemberController.java
@@ -20,7 +20,7 @@ import lombok.extern.slf4j.Slf4j;
 
 @Slf4j
 @RestController
-@RequestMapping("/api/members")
+@RequestMapping("/api/members/v1")
 @RequiredArgsConstructor
 public class MemberController {
 
